--- a/index.html
+++ b/index.html
@@ -212,6 +212,24 @@
         <span>By MAX GOODBOYE</span>
       </div>
     </div>
+    <div class="card" data-tab= "technology">
+      <div class="headline">Elon Musk lands a BFR on Mars</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/max.jpg" />
+        </div>
+        <span>By MAX GOODBOYE</span>
+      </div>
+    </div>
+    <div class="card" data-tab= "bootstrap">
+      <div class="headline">Twitter updates Boostrap, Dorsey hails engineering team</div>
+      <div class="author">
+        <div class="img-container">
+          <img src="./assets/max.jpg" />
+        </div>
+        <span>By MAX GOODBOYE</span>
+      </div>
+    </div>
 
   </div>
 </body>
